buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = "${mod_id}-forge${minecraft_version}"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client { property 'forge.enabledGameTestNamespaces', mod_id }
        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }
        gameTestServer { property 'forge.enabledGameTestNamespaces', mod_id }
        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jar {
    manifest.attributes('FMLAT': 'accesstransformer.cfg')
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

tasks.named('sourcesJar', Jar).configure {
    include '**/*.java'
}

repositories {
    maven { name "create maven"; url "https://maven.createmod.net" }
    maven {
        url "https://chocolateminecraft.com/maven"
        name "Xaero's Maven"
    }
    maven { url "https://cursemaven.com"; content { includeGroup "curse.maven" } }
    exclusiveContent {
        forRepository { maven { name = "Modrinth"; url = "https://api.modrinth.com/maven" } }
        forRepositories(fg.repository)
        filter { includeGroup "maven.modrinth" }
    }
    flatDir { dir 'libs' }
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fg.deobf("curse.maven:epic-fight-mod-405076:7919289")
    implementation fg.deobf("curse.maven:epic-fight-skill-tree-1295882:7734067")
    implementation fg.deobf('libs:epic_fight_ponder:1.0.0')
    implementation fg.deobf("curse.maven:embeddium-908741:5556138")
    implementation fg.deobf("curse.maven:chloride-931925:6615986")
    implementation fg.deobf("curse.maven:oculus-581495:5299671")
    compileOnly "xaero.minimap:xaerominimap-forge-1.20.1:26.4.2:dev"
    runtimeOnly "xaero.minimap:xaerominimap-forge-1.20.1:26.4.2:dev"
    implementation "xaero.map:xaeroworldmap-forge-1.20.1:1.44.2:dev"
    runtimeOnly fg.deobf("curse.maven:selene-499980:5478857")
    runtimeOnly fg.deobf("curse.maven:mmmmmmmmmmmm-225738:5319203")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))

    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0")) {
        jarJar.ranged(it, "[0.5.0,)")
    }

    implementation(jarJar(fg.deobf("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"))) {
        jarJar.ranged(it, "[${ponder_version},)")
        transitive = false
    }

    implementation(jarJar(fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}"))) {
        jarJar.ranged(it, "[${flywheel_version},)")
    }
    
    //单元测试依赖
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version       : forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    if (project.hasProperty('aqMaxErrs')) {
        options.compilerArgs += ['-Xmaxerrs', project.property('aqMaxErrs').toString()]
    }
}

//单元测试配置
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
}
